2009-07-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs: Fixed "Bug
	  524871 - Redraw issues in link mode". Fixed some tooltip
	  issues.

2009-07-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Fixed "Bug 524870 - F2
	  rename can be activated multiple times".

	* Mono.TextEditor/Document.cs: Fixed that StackUndoToDepth
	  creates an empty undo opertion (could dirty a document under
	  some circumstances).

2009-07-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Use a method of creating a
	  pixmap for the invisible cursor that doesn't cause a
	  Gdk-Critical on Mac.

2009-07-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed "Bug 524313 -
	  Wrong caret position when exiting local rename link mode".

2009-07-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Added some null checks.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextLinkEditMode.cs: Text link edits are now
	  atomic.

2009-07-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed "Bug 523905 -
	  Inline variable rename unnecessarily dirties document".

2009-07-21  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: Remove unused ref.

2009-07-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ISearchEngine.cs: Fixed search & replace bug
	  that could occur when caret is positinoed in or right after
	  the matched pattern and there is only one match.

2009-07-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed caret center method.

2009-07-16  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: Added removed gtk-dotnet reference.
