@@ -1,3 +1,10 @@
+2009-07-29  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor/Caret.cs:
+	* Mono.TextEditor/Document.cs:
+	* Mono.TextEditor/TextLinkEditMode.cs: Ensure that links in
+	  text link mode are never inside folded regions.
+
 2009-07-24  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextEditor.cs:
